<resources>
    <string name="app_name">Registro</string>
    <string name="bienvenido_al_registro">Bienvenido al Registro</string>
    <string name="no">No</string>
    <string name="estudiante">Estudiante</string>
    <string name="trabajador">Trabajador</string>
    <string name="terminar_registro">Terminar registro</string>
    <string name="androgino">Androgino</string>
    <string name="mujer">Mujer</string>
    <string name="hombre">Hombre</string>
    <string name="si">Si</string>
    <string name="nombre_de_usuario">Nombre de Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="correo">Correo</string>
    <string name="sexo">Sexo</string>
    <string name="tipo_de_usuario">Tipo de Usuario</string>
    <string name="mascotas">Mascotas</string>
</resources>